# backend-rust

./: Cargo.toml  Dockerfile  INSTRUCOES.md  README.md  docker-compose.yml  init.sql  nginx.conf
src/: db.rs  main.rs  types.rs
