[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde"] }